policies/constraints/k8s-block-capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockCapabilities
metadata:
  name: block-capabilities
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
