policies/constraints/k8s-block-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockRunAsRoot
metadata:
  name: block-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
